; ModuleID = '/home/carl/AnghaBench/sqlcipher/tool/extr_lemon.c_Configtable_init.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/tool/extr_lemon.c_Configtable_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.s_x4 = type { i32, i32**, i32*, i64 }

@x4a = common dso_local global %struct.s_x4* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Configtable_init() #0 {
  %1 = alloca i32, align 4
  %2 = load %struct.s_x4*, %struct.s_x4** @x4a, align 8
  %3 = icmp ne %struct.s_x4* %2, null
  br i1 %3, label %4, label %5

4:                                                ; preds = %0
  br label %49

5:                                                ; preds = %0
  %6 = call i64 @malloc(i32 32)
  %7 = inttoptr i64 %6 to %struct.s_x4*
  store %struct.s_x4* %7, %struct.s_x4** @x4a, align 8
  %8 = load %struct.s_x4*, %struct.s_x4** @x4a, align 8
  %9 = icmp ne %struct.s_x4* %8, null
  br i1 %9, label %10, label %49

10:                                               ; preds = %5
  %11 = load %struct.s_x4*, %struct.s_x4** @x4a, align 8
  %12 = getelementptr inbounds %struct.s_x4, %struct.s_x4* %11, i32 0, i32 0
  store i32 64, i32* %12, align 8
  %13 = load %struct.s_x4*, %struct.s_x4** @x4a, align 8
  %14 = getelementptr inbounds %struct.s_x4, %struct.s_x4* %13, i32 0, i32 3
  store i64 0, i64* %14, align 8
  %15 = call i64 @calloc(i32 64, i32 12)
  %16 = inttoptr i64 %15 to i32*
  %17 = load %struct.s_x4*, %struct.s_x4** @x4a, align 8
  %18 = getelementptr inbounds %struct.s_x4, %struct.s_x4* %17, i32 0, i32 2
  store i32* %16, i32** %18, align 8
  %19 = load %struct.s_x4*, %struct.s_x4** @x4a, align 8
  %20 = getelementptr inbounds %struct.s_x4, %struct.s_x4* %19, i32 0, i32 2
  %21 = load i32*, i32** %20, align 8
  %22 = icmp eq i32* %21, null
  br i1 %22, label %23, label %26

23:                                               ; preds = %10
  %24 = load %struct.s_x4*, %struct.s_x4** @x4a, align 8
  %25 = call i32 @free(%struct.s_x4* %24)
  store %struct.s_x4* null, %struct.s_x4** @x4a, align 8
  br label %48

26:                                               ; preds = %10
  %27 = load %struct.s_x4*, %struct.s_x4** @x4a, align 8
  %28 = getelementptr inbounds %struct.s_x4, %struct.s_x4* %27, i32 0, i32 2
  %29 = load i32*, i32** %28, align 8
  %30 = getelementptr inbounds i32, i32* %29, i64 64
  %31 = bitcast i32* %30 to i32**
  %32 = load %struct.s_x4*, %struct.s_x4** @x4a, align 8
  %33 = getelementptr inbounds %struct.s_x4, %struct.s_x4* %32, i32 0, i32 1
  store i32** %31, i32*** %33, align 8
  store i32 0, i32* %1, align 4
  br label %34

34:                                               ; preds = %44, %26
  %35 = load i32, i32* %1, align 4
  %36 = icmp slt i32 %35, 64
  br i1 %36, label %37, label %47

37:                                               ; preds = %34
  %38 = load %struct.s_x4*, %struct.s_x4** @x4a, align 8
  %39 = getelementptr inbounds %struct.s_x4, %struct.s_x4* %38, i32 0, i32 1
  %40 = load i32**, i32*** %39, align 8
  %41 = load i32, i32* %1, align 4
  %42 = sext i32 %41 to i64
  %43 = getelementptr inbounds i32*, i32** %40, i64 %42
  store i32* null, i32** %43, align 8
  br label %44

44:                                               ; preds = %37
  %45 = load i32, i32* %1, align 4
  %46 = add nsw i32 %45, 1
  store i32 %46, i32* %1, align 4
  br label %34

47:                                               ; preds = %34
  br label %48

48:                                               ; preds = %47, %23
  br label %49

49:                                               ; preds = %4, %48, %5
  ret void
}

declare dso_local i64 @malloc(i32) #1

declare dso_local i64 @calloc(i32, i32) #1

declare dso_local i32 @free(%struct.s_x4*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
